<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="ac">AC</string>
    <string name="bracket_1">(</string>
    <string name="bracket_2">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="pi">π</string>
    <string name="plus">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="division">÷</string>
    <string name="square_root">√</string>
    <string name="exponent">x²</string>
    <string name="factorial">x!</string>
    <string name="multiplication">×</string>
    <string name="_1_x">1/x</string>
</resources>